@startuml
skinparam monochrome true
skinparam ArrowColor #000000
skinparam NodeFontSize 14

' Classe abstrata base para os usuários do sistema
abstract class Usuario {
  
}

' Subclasses específicas de usuários
class Aluno {

}

class Monitor {

}

class Professor {
 
}

' Classes principais do domínio
class Disciplina {

}

class Agendamento {

}

class Presenca {

}

class Mensagem {

}

class Relatorio {

}

' Herança
Usuario <|-- Aluno
Usuario <|-- Monitor
Usuario <|-- Professor

' Relacionamentos
Aluno -- Agendamento : solicita >
Monitor  --  Agendamento : gerencia >
Agendamento  --  Presenca : registra >
Professor  --  Disciplina : cadastra >
Disciplina  --  Monitor : possui >
Mensagem  --  Usuario : remetente >
Mensagem -- Usuario : destinatario >
Relatorio  --  Professor : pertence >
@enduml